--- a/index.html
+++ b/index.html
@@ -3,15 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>C&T Arbro – Élagage & Abattage d’arbres · Magog, Sherbrooke & Estrie</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2" />
-  </head>
-  <body>
-    <div id="root"></div>
+    <title>C&T Arbro — Élagage & Abattage d’arbres à Magog et Sherbrooke</title>
+
+    <!-- ✅ SEO PRINCIPAL -->
+    <meta
+      name="description"
+      content="C&T Arbro offre des services professionnels d’élagage, d’abattage et d’entretien d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Sécurité, propreté et savoir-faire local."
+    />
+    <meta
+      name="keywords"
+      content="élagage Magog, abattage Sherbrooke, arboriculteur Estrie, C&T Arbro, entretien d’arbres, haubanage, dessouchage, émondage, taille de haies"
+    />
+    <meta name="author" content="C&T Arbro" />
+
+    <!-- ✅ FAVICON -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- ✅ OPEN GRAPH (Aperçu lien Facebook / Messenger) -->
+    <meta property="og:title" content="C&T Arbro — Élagage & Abattage d’arbres · Estrie" />
+    <meta
+      property="og:description"
+      content="Experts en élagage, abattage et entretien d’arbres à Magog, Sherbrooke et partout en Estrie. Estimation gratuite."
+    />
+    <meta property="og:image" content="https://arbro-site-p2cg.vercel.app/og-image.jpg" />
+    <meta property="og:url" content="https://arbro-site-p2cg.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_CA" />
+
+    <!-- ✅ TWITTER CARDS -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="C&T Arbro — Élagage & Abattage d’arbres · Estrie" />
+    <meta
+      name="twitter:description"
+      content="Experts en élagage, abattage et entretien d’arbres à Magog, Sherbrooke et en Estrie."
+    />
+    <meta name="twitter:image" content="https://arbro-site-p2cg.vercel.app/og-image.jpg" />
+
+    <!-- ✅ GOOGLE / BUSINESS LOCAL -->
+    <meta
+      itemprop="name"
+      content="C&T Arbro — Élagage & Abattage d’arbres à Magog et Sherbrooke"
+    />
+    <meta
+      itemprop="description"
+      content="Entreprise locale spécialisée dans l’élagage et l’abattage d’arbres en Estrie. Contactez-nous au (819) 843-3101."
+    />
+    <meta itemprop="image" content="https://arbro-site-p2cg.vercel.app/og-image.jpg" />
+
+    <!-- ✅ ACCESSIBILITÉ / UX -->
+    <meta name="theme-color" content="#1B4332" />
+    <meta name="color-scheme" content="light dark" />
+
+    <!-- ✅ PREFETCH / PERFORMANCE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ✅ MANIFESTE (pour PWA future) -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- React entrypoint -->
     <script type="module" src="/src/main.jsx"></script>
+  </head>
+
+  <body class="antialiased bg-[#f6f8f9] text-slate-800">
+    <div id="root"></div>
   </body>
 </html>
