Final update: email + footer + estimation + header + index.html fixes

--- a/index.html
+++ b/index.html
@@ -3,64 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>C&T Arbro — Élagage & Abattage d’arbres à Magog et Sherbrooke</title>
+    <!-- ✅ TITRE OPTIMISÉ -->
+    <title>C&T Arbro – Émondage, Élagage & Abattage d’arbres à Magog & Sherbrooke</title>
 
-    <!-- ✅ SEO PRINCIPAL -->
+    <!-- ✅ DESCRIPTION / MOTS-CLÉS -->
     <meta
       name="description"
-      content="C&T Arbro offre des services professionnels d’élagage, d’abattage et d’entretien d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Sécurité, propreté et savoir-faire local."
+      content="C&T Arbro – arboristes certifiés à Magog et Sherbrooke. Experts en émondage, élagage, abattage d’arbres, dessouchage, haubanage et taille de haies dans toute l’Estrie. Estimation gratuite !"
     />
     <meta
       name="keywords"
-      content="élagage Magog, abattage Sherbrooke, arboriculteur Estrie, entretien arbres, haubanage, dessouchage, émondage, taille haies, urgence arbre"
+      content="émondage Magog, émondage Sherbrooke, abattage arbre Magog, élagage arbre Sherbrooke, arboriculteur Estrie, dessouchage, haubanage, taille de haies, urgence arbre 24h, estimation gratuite"
     />
     <meta name="author" content="C&T Arbro" />
+    <link rel="canonical" href="https://ctarbro.ca" />
 
-    <!-- ✅ FAVICON & PWA -->
+    <!-- ✅ FAVICON / PWA -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1B4332" />
 
     <!-- ✅ OPEN GRAPH -->
-    <meta property="og:title" content="C&T Arbro — Élagage & Abattage d’arbres · Estrie" />
+    <meta property="og:title" content="C&T Arbro – Émondage & Abattage d’arbres en Estrie" />
     <meta
       property="og:description"
-      content="Experts en élagage, abattage et entretien d’arbres à Magog, Sherbrooke et partout en Estrie. Estimation gratuite et service 24/7."
+      content="Service professionnel d’émondage, élagage et abattage d’arbres à Magog, Sherbrooke et partout en Estrie. Urgence 24/7 et estimation gratuite."
     />
-    <meta property="og:image" content="https://arbro-site.vercel.app/og-image.jpg" />
+    <meta property="og:image" content="https://ctarbro.ca/assets/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://arbro-site.vercel.app/" />
+    <meta property="og:url" content="https://ctarbro.ca" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_CA" />
     <meta property="og:site_name" content="C&T Arbro" />
 
     <!-- ✅ TWITTER CARD -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="C&T Arbro — Élagage & Abattage d’arbres · Estrie" />
+    <meta name="twitter:title" content="C&T Arbro – Émondage & Abattage d’arbres en Estrie" />
     <meta
       name="twitter:description"
-      content="Entreprise locale d’élagage et abattage d’arbres à Magog et Sherbrooke. Sécurité, rapidité et propreté garanties."
+      content="Émondage, élagage et abattage d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Estimation gratuite et service rapide !"
     />
-    <meta name="twitter:image" content="https://arbro-site.vercel.app/og-image.jpg" />
+    <meta name="twitter:image" content="https://ctarbro.ca/assets/og-image.jpg" />
     <meta name="twitter:creator" content="@ctarbro" />
 
     <!-- ✅ GOOGLE LOCAL / BUSINESS -->
-    <meta
-      itemprop="name"
-      content="C&T Arbro — Élagage & Abattage d’arbres à Magog et Sherbrooke"
-    />
+    <meta itemprop="name" content="C&T Arbro – Émondage & Abattage d’arbres à Magog & Sherbrooke" />
     <meta
       itemprop="description"
-      content="Entreprise locale spécialisée dans l’élagage, l’abattage et l’entretien d’arbres en Estrie. Estimation gratuite : (819) 843-3101."
+      content="Arboristes certifiés à Magog et Sherbrooke. Émondage, élagage, abattage d’arbres, haubanage et dessouchage en Estrie. Estimation gratuite : 819-437-2104."
     />
-    <meta itemprop="image" content="https://arbro-site.vercel.app/og-image.jpg" />
+    <meta itemprop="image" content="https://ctarbro.ca/assets/og-image.jpg" />
 
     <!-- ✅ PREFETCH / PERFORMANCE -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -70,28 +66,29 @@
       rel="stylesheet"
     />
     <link rel="preload" as="image" href="/favicon.png" />
-    <link rel="preload" as="image" href="https://arbro-site.vercel.app/og-image.jpg" />
+    <link rel="preload" as="image" href="https://ctarbro.ca/assets/og-image.jpg" />
 
     <!-- ✅ ACCESSIBILITÉ / UX -->
     <meta name="color-scheme" content="light dark" />
     <meta name="robots" content="index, follow" />
     <meta name="format-detection" content="telephone=yes" />
 
-    <!-- ✅ JSON-LD (backup SEO pour robots qui n’exécutent pas le JS) -->
+    <!-- ✅ JSON-LD LOCAL BUSINESS COMPLET -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "C&T Arbro",
-        "description": "Entreprise locale d’élagage, abattage et entretien d’arbres à Magog et Sherbrooke.",
-        "image": "https://arbro-site.vercel.app/og-image.jpg",
-        "url": "https://arbro-site.vercel.app",
-        "telephone": ["+18198433101", "+18194372104"],
+        "name": "C&T Arbro – Émondage & Abattage d’arbres",
+        "image": "https://ctarbro.ca/assets/logo.png",
+        "url": "https://ctarbro.ca",
+        "telephone": "+1-819-437-2104",
+        "email": "ctarbro@gmail.com",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "1070 Rue Principale E",
           "addressLocality": "Magog",
           "addressRegion": "QC",
-          "postalCode": "J1X",
+          "postalCode": "J1X 1Z5",
           "addressCountry": "CA"
         },
         "geo": {
@@ -99,11 +96,40 @@
           "latitude": 45.266,
           "longitude": -72.147
         },
-        "openingHours": "Mo-Su 00:00-23:59",
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday",
+              "Sunday"
+            ],
+            "opens": "00:00",
+            "closes": "23:59"
+          }
+        ],
+        "areaServed": [
+          "Magog, QC",
+          "Sherbrooke, QC",
+          "Orford, QC",
+          "Eastman, QC",
+          "North Hatley, QC",
+          "Coaticook, QC",
+          "Windsor, QC",
+          "Valcourt, QC",
+          "Brompton, QC",
+          "Estrie, QC"
+        ],
+        "priceRange": "$$",
         "sameAs": [
-          "https://www.facebook.com/tonlienici",
-          "https://share.google/DiDwdpKmLmBViuMd6"
-        ]
+          "https://www.facebook.com/ctarbro",
+          "https://g.page/r/CbplHzn_gxBoEAE"
+        ],
+        "description": "Entreprise d’arboriculture à Magog et Sherbrooke. Spécialiste en émondage, élagage, abattage d’arbres, haubanage et dessouchage en Estrie. Estimation gratuite."
       }
     </script>
 
@@ -111,12 +137,10 @@
     <script type="module" src="/src/main.jsx"></script>
   </head>
 
-  <body
-    class="antialiased bg-[#f6f8f9] text-slate-800 selection:bg-emerald-200/60"
-  >
+  <body class="antialiased bg-[#f6f8f9] text-slate-800 selection:bg-emerald-200/60">
     <div id="root"></div>
 
-    <!-- ✅ Fallback no-script pour SEO -->
+    <!-- ✅ Fallback no-script -->
     <noscript>
       <p style="text-align:center; padding:2rem; color:#333;">
         Ce site nécessite JavaScript pour fonctionner correctement.
