update manifest.json + favicon + index.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <link rel="canonical" href="https://ctarbro.ca" />
 
     <!-- ✅ FAVICON / PWA -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1B4332" />
 
@@ -65,7 +66,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preload" as="image" href="/favicon.png" />
+    <link rel="preload" as="image" href="/favicon-32x32.png" />
     <link rel="preload" as="image" href="https://ctarbro.ca/assets/og-image.jpg" />
 
     <!-- ✅ ACCESSIBILITÉ / UX -->
@@ -79,7 +80,8 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "C&T Arbro – Émondage & Abattage d’arbres",
-        "image": "https://ctarbro.ca/assets/logo.png",
+        "image": "https://ctarbro.ca/favicon-512.png",
+        "logo": "https://ctarbro.ca/favicon-512.png",
         "url": "https://ctarbro.ca",
         "telephone": "+1-819-437-2104",
         "email": "ctarbro@gmail.com",
