Update favicon pack + manifest + SEO index.html final

--- a/index.html
+++ b/index.html
@@ -9,34 +9,28 @@
     <title>C&T Arbro – Émondage, Élagage & Abattage d’arbres à Magog & Sherbrooke</title>
 
     <!-- ✅ DESCRIPTION / MOTS-CLÉS -->
-    <meta
-      name="description"
-      content="C&T Arbro – arboristes certifiés à Magog et Sherbrooke. Experts en émondage, élagage, abattage d’arbres, dessouchage, haubanage et taille de haies dans toute l’Estrie. Estimation gratuite !"
-    />
-    <meta
-      name="keywords"
-      content="émondage Magog, émondage Sherbrooke, abattage arbre Magog, élagage arbre Sherbrooke, arboriculteur Estrie, dessouchage, haubanage, taille de haies, urgence arbre 24h, estimation gratuite"
-    />
+    <meta name="description" content="C&T Arbro – arboristes certifiés à Magog et Sherbrooke. Experts en émondage, élagage, abattage d’arbres, dessouchage, haubanage et taille de haies dans toute l’Estrie. Estimation gratuite !" />
+    <meta name="keywords" content="émondage Magog, émondage Sherbrooke, abattage arbre Magog, élagage arbre Sherbrooke, arboriculteur Estrie, dessouchage, haubanage, taille de haies, urgence arbre 24h, estimation gratuite" />
     <meta name="author" content="C&T Arbro" />
-    <link rel="canonical" href="https://ctarbro.ca" />
+    <link rel="canonical" href="https://ctarbro.ca/" />
 
-    <!-- ✅ FAVICON / PWA -->
+    <!-- ✅ FAVICON / PWA (pack favicon.io) -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1B4332" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="format-detection" content="telephone=yes" />
 
     <!-- ✅ OPEN GRAPH -->
     <meta property="og:title" content="C&T Arbro – Émondage & Abattage d’arbres en Estrie" />
-    <meta
-      property="og:description"
-      content="Service professionnel d’émondage, élagage et abattage d’arbres à Magog, Sherbrooke et partout en Estrie. Urgence 24/7 et estimation gratuite."
-    />
+    <meta property="og:description" content="Service professionnel d’émondage, élagage et abattage d’arbres à Magog, Sherbrooke et partout en Estrie. Urgence 24/7 et estimation gratuite." />
     <meta property="og:image" content="https://ctarbro.ca/assets/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://ctarbro.ca" />
+    <meta property="og:url" content="https://ctarbro.ca/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_CA" />
     <meta property="og:site_name" content="C&T Arbro" />
@@ -44,47 +38,30 @@
     <!-- ✅ TWITTER CARD -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="C&T Arbro – Émondage & Abattage d’arbres en Estrie" />
-    <meta
-      name="twitter:description"
-      content="Émondage, élagage et abattage d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Estimation gratuite et service rapide !"
-    />
+    <meta name="twitter:description" content="Émondage, élagage et abattage d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Estimation gratuite et service rapide !" />
     <meta name="twitter:image" content="https://ctarbro.ca/assets/og-image.jpg" />
-    <meta name="twitter:creator" content="@ctarbro" />
-
-    <!-- ✅ GOOGLE LOCAL / BUSINESS -->
-    <meta itemprop="name" content="C&T Arbro – Émondage & Abattage d’arbres à Magog & Sherbrooke" />
-    <meta
-      itemprop="description"
-      content="Arboristes certifiés à Magog et Sherbrooke. Émondage, élagage, abattage d’arbres, haubanage et dessouchage en Estrie. Estimation gratuite : 819-437-2104."
-    />
-    <meta itemprop="image" content="https://ctarbro.ca/assets/og-image.jpg" />
 
     <!-- ✅ PREFETCH / PERFORMANCE -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="preload" as="image" href="/favicon-32x32.png" />
-    <link rel="preload" as="image" href="https://ctarbro.ca/assets/og-image.jpg" />
+    <link rel="preload" as="image" href="/assets/og-image.jpg" />
 
-    <!-- ✅ ACCESSIBILITÉ / UX -->
-    <meta name="color-scheme" content="light dark" />
+    <!-- ✅ ROBOTS -->
     <meta name="robots" content="index, follow" />
-    <meta name="format-detection" content="telephone=yes" />
 
-    <!-- ✅ JSON-LD LOCAL BUSINESS COMPLET -->
+    <!-- ✅ JSON-LD LOCAL BUSINESS -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "C&T Arbro – Émondage & Abattage d’arbres",
-        "image": "https://ctarbro.ca/favicon-512.png",
-        "logo": "https://ctarbro.ca/favicon-512.png",
-        "url": "https://ctarbro.ca",
+        "image": "https://ctarbro.ca/android-chrome-512x512.png",
+        "logo": "https://ctarbro.ca/android-chrome-512x512.png",
+        "url": "https://ctarbro.ca/",
         "telephone": "+1-819-437-2104",
-        "email": "ctarbro@gmail.com",
+        "email": "contact.ctarbro@gmail.com",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "1070 Rue Principale E",
@@ -101,48 +78,27 @@
         "openingHoursSpecification": [
           {
             "@type": "OpeningHoursSpecification",
-            "dayOfWeek": [
-              "Monday",
-              "Tuesday",
-              "Wednesday",
-              "Thursday",
-              "Friday",
-              "Saturday",
-              "Sunday"
-            ],
+            "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
             "opens": "00:00",
             "closes": "23:59"
           }
         ],
-        "areaServed": [
-          "Magog, QC",
-          "Sherbrooke, QC",
-          "Orford, QC",
-          "Eastman, QC",
-          "North Hatley, QC",
-          "Coaticook, QC",
-          "Windsor, QC",
-          "Valcourt, QC",
-          "Brompton, QC",
-          "Estrie, QC"
-        ],
+        "areaServed": ["Magog, QC","Sherbrooke, QC","Orford, QC","Eastman, QC","North Hatley, QC","Coaticook, QC","Windsor, QC","Valcourt, QC","Brompton, QC","Estrie, QC"],
         "priceRange": "$$",
         "sameAs": [
-          "https://www.facebook.com/ctarbro",
+          "https://www.facebook.com/profile.php?id=61582498367361",
           "https://g.page/r/CbplHzn_gxBoEAE"
         ],
         "description": "Entreprise d’arboriculture à Magog et Sherbrooke. Spécialiste en émondage, élagage, abattage d’arbres, haubanage et dessouchage en Estrie. Estimation gratuite."
       }
     </script>
 
-    <!-- ✅ ENTRYPOINT REACT -->
+    <!-- ✅ ENTRYPOINT REACT (Vite) -->
     <script type="module" src="/src/main.jsx"></script>
   </head>
 
   <body class="antialiased bg-[#f6f8f9] text-slate-800 selection:bg-emerald-200/60">
     <div id="root"></div>
-
-    <!-- ✅ Fallback no-script -->
     <noscript>
       <p style="text-align:center; padding:2rem; color:#333;">
         Ce site nécessite JavaScript pour fonctionner correctement.
