--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <title>C&T Arbro – Émondage, Élagage & Abattage d’arbres à Magog & Sherbrooke</title>
 
     <!-- ✅ DESCRIPTION / MOTS-CLÉS -->
-    <meta name="description" content="C&T Arbro – arboristes certifiés à Magog et Sherbrooke. Experts en émondage, élagage, abattage d’arbres, dessouchage, haubanage et taille de haies dans toute l’Estrie. Estimation gratuite !" />
-    <meta name="keywords" content="émondage Magog, émondage Sherbrooke, abattage arbre Magog, élagage arbre Sherbrooke, arboriculteur Estrie, dessouchage, haubanage, taille de haies, urgence arbre 24h, estimation gratuite" />
+    <meta
+      name="description"
+      content="C&T Arbro – arboristes certifiés à Magog et Sherbrooke. Experts en émondage, élagage, abattage d’arbres, dessouchage, haubanage et taille de haies dans toute l’Estrie. Estimation gratuite !"
+    />
+    <meta
+      name="keywords"
+      content="émondage Magog, émondage Sherbrooke, abattage arbre Magog, élagage arbre Sherbrooke, arboriculteur Estrie, dessouchage, haubanage, taille de haies, urgence arbre 24h, estimation gratuite"
+    />
     <meta name="author" content="C&T Arbro" />
     <link rel="canonical" href="https://ctarbro.ca/" />
 
-    <!-- ✅ FAVICON / PWA (pack favicon.io) -->
+    <!-- ✅ FAVICON / PWA -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -26,8 +32,11 @@
 
     <!-- ✅ OPEN GRAPH -->
     <meta property="og:title" content="C&T Arbro – Émondage & Abattage d’arbres en Estrie" />
-    <meta property="og:description" content="Service professionnel d’émondage, élagage et abattage d’arbres à Magog, Sherbrooke et partout en Estrie. Urgence 24/7 et estimation gratuite." />
-    <meta property="og:image" content="https://ctarbro.ca/assets/og-image.jpg" />
+    <meta
+      property="og:description"
+      content="Service professionnel d’émondage, élagage et abattage d’arbres à Magog, Sherbrooke et partout en Estrie. Urgence 24/7 et estimation gratuite."
+    />
+    <meta property="og:image" content="https://ctarbro.ca/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://ctarbro.ca/" />
@@ -38,15 +47,21 @@
     <!-- ✅ TWITTER CARD -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="C&T Arbro – Émondage & Abattage d’arbres en Estrie" />
-    <meta name="twitter:description" content="Émondage, élagage et abattage d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Estimation gratuite et service rapide !" />
-    <meta name="twitter:image" content="https://ctarbro.ca/assets/og-image.jpg" />
+    <meta
+      name="twitter:description"
+      content="Émondage, élagage et abattage d’arbres à Magog, Sherbrooke et dans toute l’Estrie. Estimation gratuite et service rapide !"
+    />
+    <meta name="twitter:image" content="https://ctarbro.ca/og-image.jpg" />
 
     <!-- ✅ PREFETCH / PERFORMANCE -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preload" as="image" href="/favicon-32x32.png" />
-    <link rel="preload" as="image" href="/assets/og-image.jpg" />
+    <link rel="preload" as="image" href="/og-image.jpg" />
 
     <!-- ✅ ROBOTS -->
     <meta name="robots" content="index, follow" />
@@ -78,12 +93,31 @@
         "openingHoursSpecification": [
           {
             "@type": "OpeningHoursSpecification",
-            "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday",
+              "Sunday"
+            ],
             "opens": "00:00",
             "closes": "23:59"
           }
         ],
-        "areaServed": ["Magog, QC","Sherbrooke, QC","Orford, QC","Eastman, QC","North Hatley, QC","Coaticook, QC","Windsor, QC","Valcourt, QC","Brompton, QC","Estrie, QC"],
+        "areaServed": [
+          "Magog, QC",
+          "Sherbrooke, QC",
+          "Orford, QC",
+          "Eastman, QC",
+          "North Hatley, QC",
+          "Coaticook, QC",
+          "Windsor, QC",
+          "Valcourt, QC",
+          "Brompton, QC",
+          "Estrie, QC"
+        ],
         "priceRange": "$$",
         "sameAs": [
           "https://www.facebook.com/profile.php?id=61582498367361",
@@ -100,7 +134,7 @@
   <body class="antialiased bg-[#f6f8f9] text-slate-800 selection:bg-emerald-200/60">
     <div id="root"></div>
     <noscript>
-      <p style="text-align:center; padding:2rem; color:#333;">
+      <p style="text-align: center; padding: 2rem; color: #333;">
         Ce site nécessite JavaScript pour fonctionner correctement.
       </p>
     </noscript>
